--- a/ProyectowebApp/templates/ProyectowebApp/productos.html
+++ b/ProyectowebApp/templates/ProyectowebApp/productos.html
@@ -21,11 +21,25 @@
 
 {% for producto in pro%}
 
-<div>
+<section id="gallery" class="gallery">
+    <div class="container-fluid">
+
+        <div class="row gy-4 justify-content-center">
+            <div class="col-xl-4 left-center">
+                <h2 style="color: white; ">{{producto.titulo}}</h2>
+                <p style="color: white;">{{producto.contenido}}</p>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <div class="gallery-item h-100">
+                    <img src="{{producto.imagen.url}}" class="img-fluid" alt="">
+                    <div class="gallery-links d-flex align-items-center justify-content-center">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+<!-- <div >
     <p>
-
-
-
 
     <h2 style="color: white;">{{producto.titulo}}</h2>
 
@@ -34,8 +48,10 @@
     <p><img src="{{producto.imagen.url}}"> </p>
 
     </p>
-</div>
+    
+</div> -->
 
 {%endfor%}
 
 {% endblock%}
+
