--- a/ProyectowebApp/templates/ProyectowebApp/acerca.html
+++ b/ProyectowebApp/templates/ProyectowebApp/acerca.html
@@ -25,7 +25,7 @@
 
         <div class="row gy-4 justify-content-center">
             <div class="col-lg-4">
-                <img src="{% static 'ProyectowebApp/assets/img/profile-img.jpg'%}" class="img-fluid" alt="">
+                <img src="{% static 'ProyectowebApp/assets/img/palmas.jpg'%}" class="img-fluid" alt="">
             </div>
             <div class="col-lg-5 content">
                 <h2>Profesionales Productores de Coco</h2>
@@ -38,8 +38,8 @@
                             <li><i class="bi bi-chevron-right"></i> <strong>Desde:</strong> <span>01 de Mayo de 1995</span>
                             </li>
                             <li><i class="bi bi-chevron-right"></i> <strong>Sitio Web:</strong>
-                                <span>www.example.com</span></li>
-                            <li><i class="bi bi-chevron-right"></i> <strong>Telfono:</strong> <span>+123 456 7890</span>
+                                <span>www.altosdelpacifico.com</span></li>
+                            <li><i class="bi bi-chevron-right"></i> <strong>Telfono:</strong> <span>+52 7446689000</span>
                             </li>
                             <li><i class="bi bi-chevron-right"></i> <strong>Ubicación:</strong> <span>Arenal de centro, municipio de Benito Juárez.</span>
                             </li>
@@ -48,9 +48,9 @@
                     <div class="col-lg-6">
                         <ul>
                             <li><i class="bi bi-chevron-right"></i> <strong>Edad de la empresa:</strong> <span>10 años</span></li>
-                            <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
+                            <li><i class="bi bi-chevron-right"></i> <strong></strong> <span></span></li>
                             <li><i class="bi bi-chevron-right"></i> <strong>Correo Electronico:</strong>
-                                <span>email@example.com</span></li>
+                                <span>cocoadmin@gmail.com</span></li>
                         </ul>
                     </div>
                 </div>
