--- a/ProyectowebApp/templates/ProyectowebApp/contacto.html
+++ b/ProyectowebApp/templates/ProyectowebApp/contacto.html
@@ -43,7 +43,7 @@
                             <i class="bi bi-envelope flex-shrink-0"></i>
                             <div>
                                 <h4>Correo Electronico:</h4>
-                                <p>info@example.com</p>
+                                <p>cocoadmin@gmail.com</p>
                             </div>
                         </div>
                     </div><!-- End Info Item -->
@@ -53,7 +53,7 @@
                             <i class="bi bi-phone flex-shrink-0"></i>
                             <div>
                                 <h4>Telefono:</h4>
-                                <p>+1 5589 55488 55</p>
+                                <p>+52 7446689000</p>
                             </div>
                         </div>
                     </div><!-- End Info Item -->
