--- a/ProyectowebApp/templates/ProyectowebApp/home.html
+++ b/ProyectowebApp/templates/ProyectowebApp/home.html
@@ -27,9 +27,9 @@ data-aos-delay="1500">
                 <div class="row gy-4 justify-content-center">
                     <div class="col-xl-3 col-lg-4 col-md-6">
                         <div class="gallery-item h-100">
-                            <img src="{% static 'ProyectowebApp/assets/img/gallery/gallery-1.jpg'%}" class="img-fluid" alt="">
+                            <img src="{% static 'ProyectowebApp/assets/img/gallery/Empanizador de coco.JPG'%}" class="img-fluid" alt="">
                             <div class="gallery-links d-flex align-items-center justify-content-center">
-                                <a href="assets/img/gallery/gallery-1.jpg" title="Gallery 1"
+                                <a href="assets/img/gallery/Aceite de coco.JPG" title="Gallery 1"
                                     class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
                             </div>
@@ -37,7 +37,7 @@ data-aos-delay="1500">
                     </div><!-- End Gallery Item -->
                     <div class="col-xl-3 col-lg-4 col-md-6">
                         <div class="gallery-item h-100">
-                            <img src="assets/img/gallery/gallery-2.jpg" class="img-fluid" alt="">
+                            <img src="{% static 'ProyectowebApp/assets/img/gallery/Crema_de_coco.JPG'%}" class="img-fluid" alt="">
                             <div class="gallery-links d-flex align-items-center justify-content-center">
                                 <a href="assets/img/gallery/gallery-2.jpg" title="Gallery 2"
                                     class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
@@ -47,7 +47,7 @@ data-aos-delay="1500">
                     </div><!-- End Gallery Item -->
                     <div class="col-xl-3 col-lg-4 col-md-6">
                         <div class="gallery-item h-100">
-                            <img src="assets/img/gallery/gallery-3.jpg" class="img-fluid" alt="">
+                            <img src="{% static 'ProyectowebApp/assets/img/gallery/Desmaquillante de coco.JPG'%}" class="img-fluid" alt="">
                             <div class="gallery-links d-flex align-items-center justify-content-center">
                                 <a href="assets/img/gallery/gallery-3.jpg" title="Gallery 3"
                                     class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
@@ -57,7 +57,7 @@ data-aos-delay="1500">
                     </div><!-- End Gallery Item -->
                     <div class="col-xl-3 col-lg-4 col-md-6">
                         <div class="gallery-item h-100">
-                            <img src="assets/img/gallery/gallery-4.jpg" class="img-fluid" alt="">
+                            <img src="{% static 'ProyectowebApp/assets/img/gallery/Labial de coco.JPG'%}" class="img-fluid" alt="">
                             <div class="gallery-links d-flex align-items-center justify-content-center">
                                 <a href="assets/img/gallery/gallery-4.jpg" title="Gallery 4"
                                     class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
@@ -77,7 +77,7 @@ data-aos-delay="1500">
                     </div><!-- End Gallery Item -->
                     <div class="col-xl-3 col-lg-4 col-md-6">
                         <div class="gallery-item h-100">
-                            <img src="assets/img/gallery/gallery-6.jpg" class="img-fluid" alt="">
+                            <img src="{% static 'ProyectowebApp/assets/img/gallery/Empanizador de coco.JPG'%}" class="img-fluid" alt="">
                             <div class="gallery-links d-flex align-items-center justify-content-center">
                                 <a href="assets/img/gallery/gallery-6.jpg" title="Gallery 6"
                                     class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
@@ -87,7 +87,7 @@ data-aos-delay="1500">
                     </div><!-- End Gallery Item -->
                     <div class="col-xl-3 col-lg-4 col-md-6">
                         <div class="gallery-item h-100">
-                            <img src="assets/img/gallery/gallery-7.jpg" class="img-fluid" alt="">
+                            <img src="{% static 'ProyectowebApp/assets/img/gallery/Empanizador de coco.JPG'%}" class="img-fluid" alt="">
                             <div class="gallery-links d-flex align-items-center justify-content-center">
                                 <a href="assets/img/gallery/gallery-7.jpg" title="Gallery 7"
                                     class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
@@ -97,7 +97,7 @@ data-aos-delay="1500">
                     </div><!-- End Gallery Item -->
                     <div class="col-xl-3 col-lg-4 col-md-6">
                         <div class="gallery-item h-100">
-                            <img src="assets/img/gallery/gallery-8.jpg" class="img-fluid" alt="">
+                            <img src="{% static 'ProyectowebApp/assets/img/gallery/Empanizador de coco.JPG'%}" class="img-fluid" alt="">
                             <div class="gallery-links d-flex align-items-center justify-content-center">
                                 <a href="assets/img/gallery/gallery-8.jpg" title="Gallery 8"
                                     class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
